# devops-playground

./: .gitignore  README.md
K8s-configMap/: .env  Dockerfile  README.md  config.py  main.py  pyproject.toml
K8s-configMap/k8s/: configMap-deployments.yaml  configMap-svc.yaml  configMap.yaml
Linux-troubleshot-lab/: README.md
Linux-troubleshot-lab/notes/: commands.md
Linux-troubleshot-lab/scenarios/cpu-memory-spike/: README.md  break.sh  fix.sh
Linux-troubleshot-lab/scenarios/disk-full/: README.md  break.sh  fix.sh
docker-multi-stage/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt
docker-multi-stage/.github/: dependabot.yaml
docker-multi-stage/src/: main.py
k8s-multi-app/: .dockerignore  .env  README.md  config.py  main.py  pyproject.toml
k8s-multi-app/frontend/: 502.html  Dockerfile  entry.sh  index.html  nginx.conf
k8s-multi-app/k8s/: backend-deploy.yaml  backend-service.yaml  configMap.yaml  frontend-deploy.yaml  frontend-service.yaml  ingress.yaml
k8s-secrets/: .env  Dockerfile  config.py  main.py  pyproject.toml
k8s-secrets/k8s/: deployment.yaml  secrets.yaml
k8s-single-pod/: .dockerignore  Dockerfile  README.md  pyproject.toml
k8s-single-pod/k8s/: single-pod-svc.yaml  single-pod.yaml
k8s-single-pod/k8s-pod/: single-pod-depl.yaml  single-pod-svc.yaml  single-pod.yaml
loki-grafana-promtail/: compose.yml  prometheus-config.yml
prometheus-grafana-docker/: README.md  Taskfile.yml  compose.yml
prometheus-grafana-docker/prometheus/: alertrules.yml  prometheus.yml  targets.json
(+15 files in other folders)
