[project]
name = "docker-multi-stage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.129.0",
    "gunicorn>=25.1.0",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "coverage>=7.13.4",
    "isort>=7.0.0",
    "pytest>=9.0.2",
]
